# FastaVector

./: .gitignore  CMakeLists.txt  Dockerfile_build  Doxyfile  Makefile_legacy  README.md  makefile  readme.MD
.github/workflows/: build-and-test.yml  format.yml
docs/: _c_make_c_compiler_id_8c.html  _c_make_c_compiler_id_8c.js  _c_make_c_x_x_compiler_id_8cpp.html  _c_make_cache_8txt.html  _c_make_lists_8txt.html  _fasta_vector_8c.html  _fasta_vector_8c.js  _fasta_vector_8h.html  _fasta_vector_8h.js  _fasta_vector_8h_source.html  _fasta_vector_metadata_vector_8c.html  _fasta_vector_metadata_vector_8c.js  _fasta_vector_metadata_vector_8h.html  _fasta_vector_metadata_vector_8h.js  _fasta_vector_metadata_vector_8h_source.html  _fasta_vector_string_8c.html  _fasta_vector_string_8c.js  _fasta_vector_string_8h.html  _fasta_vector_string_8h.js  _fasta_vector_string_8h_source.html  _r_e_a_d_m_e_8md.html  _target_directories_8txt.html  annotated.html  annotated_dup.js  classes.html  dir_017ad5e908c41501f6a06b5119b37293.html  dir_017ad5e908c41501f6a06b5119b37293.js  dir_13e138d54eb8818da29c3992edef070a.html  dir_13e138d54eb8818da29c3992edef070a.js  dir_1e0723828c5e5b7fe29672bf74b805ec.html  dir_1e0723828c5e5b7fe29672bf74b805ec.js  dir_223fd011857b0594579b384c66dfa0b8.html  dir_223fd011857b0594579b384c66dfa0b8.js  dir_48cba227dfc32d4a7cce05dca54771ef.html  dir_48cba227dfc32d4a7cce05dca54771ef.js  dir_4a3ea48a9b465da2d9512a91ae1dd1f6.html  dir_4a3ea48a9b465da2d9512a91ae1dd1f6.js  dir_4f193e4d90f18a5ff47c7aadc857c14a.html  dir_4f193e4d90f18a5ff47c7aadc857c14a.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  (+58 more)
docs/search/: all_0.js  all_1.js  all_2.js  all_5.js  all_7.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  defines_2.js  defines_4.js  enums_0.js  enumvalues_0.js  files_0.js  files_3.js  files_5.js  files_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  groups_0.js  pages_0.js  searchdata.js  variables_2.js  variables_3.js  variables_8.js  variables_9.js
src/: FastaVector.c  FastaVector.h  FastaVectorMetadataVector.c  FastaVectorMetadataVector.h  FastaVectorString.c  FastaVectorString.h  fastaVector.c  fastaVector.h  fastaVectorMetadataVector.c  fastaVectorMetadataVector.h  fastaVectorString.c  fastaVectorString.h
test/: testAssert.h
test/fileReadTests/: fileReadTest.c  makefile  test3.fasta  test5.fasta
test/fileReadTests.c/: test2.fasta  test4.fasta  test6.fasta
test/insertTest/: insertTest.c  makefile
test/writeFileTests/: makefile  statictest.fasta  test.fasta  test0.fasta  test1.fasta  test2.fasta  test3.fasta  test4.fasta  test5.fasta  test6.fasta  test7.fasta  test8.fasta  test9.fasta  writeFileTest.c
tests/: asserts.h  testAssert.h  testFastaVectorInit.c
tests/fileReadTest/: fileReadTest.c  makefile  test7.fasta
tests/fileReadTests/: fileReadTest.c
tests/fileWriteTest/: fileWriteTest.c  makefile  statictest.fasta  test0.fasta  test1.fasta  test2.fasta  test3.fasta  test4.fasta  test5.fasta  test6.fasta  test7.fasta  test8.fasta  test9.fasta  writeFileTest.c
tests/insertTest/: insertTest.c  makefile
tests/multiSequenceTest/: makefile  multiSequenceTest.c  test.fa
tests/writeFileTests/: test2.fasta  test6.fasta  writeFileTest.c
tool/: build-builder-image.sh  check-format.sh  push-builder-image.sh  run-format.sh
